Added cache & bugfixes