@@ -16,7 +16,6 @@ import ru.schedule.manager.infrastructure.base.service.BaseServiceAware;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import static ru.schedule.manager.business.exception.ExceptionMessageUtils.ENTITY_NOT_FOUND_EXCEPTION_PATTERN;
 
@@ -50,7 +49,7 @@ public class ProfessorDepartmentService implements BaseServiceAware<ProfessorDep
 			.filter(Objects::nonNull)
 			.map(this::fromEntity)
 			.sorted(Comparator.comparing(value -> value.getDepartment().getValue()))
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	@Override
